Fixed welcome icon and mates separator not showing on sunday (on app start)

--- a/style.css
+++ b/style.css
@@ -1832,4 +1832,9 @@ a {
         display: none;
     }
 
+    #letStartIcon {
+        width: 200px !important;
+        height: 200px !important;
+    }
+
 }
